<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/qr_dialog_label"
        android:textColor="@color/dialog_text_color"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/result_tv"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/qr_dialog_label"
                android:textColor="@color/dialog_text_color"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:id="@+id/open_browser_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_dialog_open_browser"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/dialog_text_link_color"
        android:textSize="18sp"/>

    <include layout="@layout/item_line" />

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:id="@+id/search_browser_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_dialog_search"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/dialog_text_link_color"
        android:textSize="18sp"/>

    <include layout="@layout/item_line" />

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:id="@+id/copy_clipboard_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_dialog_copy_clipboard"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/dialog_text_link_color"
        android:textSize="18sp"/>

    <include layout="@layout/item_line" />

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:id="@+id/save_code_db_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_dialog_save"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/dialog_text_link_color"
        android:textSize="18sp"/>

    <include layout="@layout/item_line" />



</LinearLayout>