<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/ksw_md_solid_checked">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="12dp"
          android:layout_marginLeft="24dp"
          android:layout_marginRight="24dp"
          android:layout_marginTop="12dp"
          android:gravity="center"
          android:text="Do Simply generate a QR code by texts"
          android:textColor="#ffffff"
          android:textSize="16sp"
          android:textStyle="bold" />

  </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginBottom="8dp"
      android:gravity="center"
      android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp">

      <EditText
          android:id="@+id/qr_edit_text"
          android:singleLine="true"
          android:hint="@string/qr_generate_edit_text_hint"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColorHint="@color/color_charging_end_text"
          android:textColor="@color/color_charging_end_value"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/qr_img"
        android:layout_width="@dimen/qr_generated_img_size"
        android:layout_height="@dimen/qr_generated_img_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

      <LinearLayout
          android:id="@+id/generate_btn"
          android:layout_marginRight="8dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg"
          android:gravity="center">

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/qr_generate_btn_generate_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

      </LinearLayout>

      <LinearLayout
          android:visibility="gone"
          android:id="@+id/save_btn"
          android:layout_marginLeft="8dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg"
          android:gravity="center">

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/qr_generate_btn_save_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

      </LinearLayout>

    </LinearLayout>
  </RelativeLayout>

</LinearLayout>
